--- a/index.html
+++ b/index.html
@@ -8,7 +8,359 @@
 
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
+
   <body>
-    
+    <div class="container">
+      <section class="top-tables">
+        <table class="table table--main">
+          <thead class="table__head table__head--main">
+            <tr class="table__row table__row--head table__row--main">
+              <th class="table__title">#</th>
+              <th class="table__title">Имя</th>
+              <th class="table__title">За этот месяц</th>
+              <th class="table__title">Среднее время работы</th>
+              <th class="table__title">Остаток до бонуса</th>
+              <th class="table__title">Всего</th>
+              <th class="table__title">Среднемесячная сумма</th>
+              <th class="table__title table__title--right">Награды</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="table__row table__row--main">
+              <th class="table__place">
+                <div class="table__icon">
+                  <img src="/assets/icons/first.png" alt="" />
+                </div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-1.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Тройнич</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+                <div class="table__reaction">
+                  <img src="/assets/icons/thumbsup.png" alt="" />
+                </div>
+              </td>
+              <td class="table__cell"><b>3ч 56мин</b></td>
+              <td class="table__cell">-299 000 $</td>
+              <td class="table__cell"><b>990 000 $</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__awards">
+                <div class="table__award">
+                  <img src="/assets/icons/horn.png" alt="" />
+                </div>
+                <div class="table__award">
+                  <img src="/assets/icons/rocket.png" alt="" />
+                </div>
+                <div class="table__award">
+                  <img src="/assets/icons/money.png" alt="" />
+                </div>
+              </td>
+            </tr>
+            <tr class="table__row table__row--main">
+              <th class="table__place">
+                <div class="table__icon">
+                  <img src="/assets/icons/second.png" alt="" />
+                </div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-2.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Конь-голова</b></td>
+              <td class="table__cash table__cash--red">
+                <span>990 000 $</span>
+                <div class="table__reaction">
+                  <img src="/assets/icons/stop.png" alt="" />
+                </div>
+              </td>
+              <td class="table__cell"><b>2ч 33мин</b></td>
+              <td class="table__cell">-399 000 $</td>
+              <td class="table__cell"><b>880 000 $</b></td>
+              <td class="table__cash table__cash--red">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__awards">
+                <div class="table__award">
+                  <img src="/assets/icons/bulb.png" alt="" />
+                </div>
+                <div class="table__award">
+                  <img src="/assets/icons/wizzard.png" alt="" />
+                </div>
+              </td>
+            </tr>
+            <tr class="table__row table__row--main">
+              <th class="table__place">
+                <div class="table__icon">
+                  <img src="/assets/icons/third.png" alt="" />
+                </div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-3.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Hellcat</b></td>
+              <td class="table__cash table__cash--grey">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>9ч 20мин</b></td>
+              <td class="table__cell">-599 000 $</td>
+              <td class="table__cell"><b>790 000 $</b></td>
+              <td class="table__cash table__cash--grey">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__awards">
+                <div class="table__award">
+                  <img src="/assets/icons/darts.png" alt="" />
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="table table--second">
+          <tbody>
+            <tr class="table__row table__row--main">
+              <th class="table__place">
+                <div class="table__icon">
+                  <img src="/assets/icons/death.png" alt="" />
+                </div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-4.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Петлюра</b></td>
+              <td class="table__cash table__cash--red">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>1ч 10мин</b></td>
+              <td class="table__cell">-999 000 $</td>
+              <td class="table__cell"><b>790 000 $</b></td>
+              <td class="table__cash table__cash--red">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__awards">
+                <div class="table__award">
+                  <img src="/assets/icons/eyes.png" alt="" />
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section class="middle">
+        <div class="middle__bear middle__bear--left">
+          <img src="/assets/img/bear.png" alt="">
+        </div>
+        <div class="middle__content">
+          <div class="slider">
+
+          </div>
+          <div class="middle__info">
+            <table class="middle__table">
+              <tbody>
+                <tr>
+                  <td class="middle__cell"><b>Миша рулевой</b> <span>Команда</span></td>
+                  <td class="middle__cell"><b>800 000 000</b> <span>Всего</span></td>
+                  <td class="middle__cell"><b>2</b> <span>Выполнили</span></td>
+                  <td class="middle__cell"><b>92</b> <span>Часы</span></td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="middle__vs">
+              <img src="/assets/icons/vs.png" alt="">
+            </div>
+            <table class="middle__table">
+              <tbody>
+                <tr>
+                  <td class="middle__cell"><b>Миша рулевой</b> <span>Команда</span></td>
+                  <td class="middle__cell"><b>800 000 000</b> <span>Всего</span></td>
+                  <td class="middle__cell"><b>2</b> <span>Выполнили</span></td>
+                  <td class="middle__cell"><b>92</b> <span>Часы</span></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="middle__bear middle__bear--right">
+          <img src="/assets/img/bear.png" alt="">
+        </div>
+      </section>
+
+      <section class="bottom-tables">
+        <table class="table table--mini" style="padding-right: 48px;">
+          <thead class="table__head table__head--mini">
+            <tr class="table__row table__row--head table__row--mini">
+              <th class="table__title">#</th>
+              <th class="table__title">Имя</th>
+              <th class="table__title" style='padding-left: 15px;'>За месяц</th>
+              <th class="table__title" style='padding-left: 10px;'>До плана</th>
+              <th class="table__title table__title--right">Работал</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">1</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-1.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Конан</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">40.2ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">2</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-2.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Конан</b></td>
+              <td class="table__cash table__cash--red">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">30ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">3</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-4.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Катя Базука</b></td>
+              <td class="table__cash table__cash--grey">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">29.5ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">4</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-5.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Уголёк</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">28.1ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">5</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-5.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Уголёк</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">28.1ч</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="bottom-tables__bear">
+          <img src="/assets/img/bear.png" alt="">
+        </div>
+        <table class="table table--mini" style="padding-left: 48px;">
+          <thead class="table__head table__head--mini">
+            <tr class="table__row table__row--head table__row--mini">
+              <th class="table__title">#</th>
+              <th class="table__title">Имя</th>
+              <th class="table__title" style='padding-left: 15px;'>За месяц</th>
+              <th class="table__title" style='padding-left: 10px;'>До плана</th>
+              <th class="table__title table__title--right">Работал</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">1</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-1.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Конан</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">40.2ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">2</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-2.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Конан</b></td>
+              <td class="table__cash table__cash--red">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">30ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">3</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-4.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Катя Базука</b></td>
+              <td class="table__cash table__cash--grey">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">29.5ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">4</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-5.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Уголёк</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">28.1ч</td>
+            </tr>
+            <tr class="table__row table__row--mini">
+              <th class="table__place table__place--mini">
+                <div class="table__number">5</div>
+                <div class="table__avatar">
+                  <img src="/assets/img/human-5.png" alt="" />
+                </div>
+              </th>
+              <td class="table__cell"><b>Уголёк</b></td>
+              <td class="table__cash table__cash--green">
+                <span>990 000 $</span>
+              </td>
+              <td class="table__cell"><b>-2 000$</b></td>
+              <td class="table__cell">28.1ч</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </div>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
