--- a/index.html
+++ b/index.html
@@ -147,6 +147,29 @@
             </tr>
           </tbody>
         </table>
+
+        <div class="notifications">
+          <div class="notifications__item">
+            <img src="/assets/img/human-1.png" alt="" class="notifications__img">
+            <div class="notifications__info">
+              <b>Тройнич</b>
+              <span>17:16</span>
+            </div>
+            <div class="notifications__cash notifications__cash--green">
+              <span>+990 000 $</span>
+            </div>
+          </div>
+          <div class="notifications__item">
+            <img src="/assets/img/human-1.png" alt="" class="notifications__img">
+            <div class="notifications__info">
+              <b>Тройнич</b>
+              <span>17:16</span>
+            </div>
+            <div class="notifications__cash notifications__cash--green">
+              <span>+990 000 $</span>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="middle">
@@ -155,7 +178,11 @@
         </div>
         <div class="middle__content">
           <div class="slider">
-
+            <div class="slider__container">
+              <input type="range" step="0.1" value="56" class="styled-slider slider-progress">
+              <span class="slider__value slider__value--left">56%</span>
+              <span class="slider__value slider__value--right">44%</span>
+            </div>
           </div>
           <div class="middle__info">
             <table class="middle__table">
@@ -222,7 +249,7 @@
                   <img src="/assets/img/human-2.png" alt="" />
                 </div>
               </th>
-              <td class="table__cell"><b>Конан</b></td>
+              <td class="table__cell"><b>Валедол</b></td>
               <td class="table__cash table__cash--red">
                 <span>990 000 $</span>
               </td>
@@ -308,7 +335,7 @@
                   <img src="/assets/img/human-2.png" alt="" />
                 </div>
               </th>
-              <td class="table__cell"><b>Конан</b></td>
+              <td class="table__cell"><b>Валедол</b></td>
               <td class="table__cash table__cash--red">
                 <span>990 000 $</span>
               </td>
